# Eltex_School

./: README.md
module1/practice1/task1/: report_part1.txt
module1/practice2/: task2  task3
module2/3/3.2 ip packet simulator/: simple_ip_packet_simulator.c
module2/4/4.2 prioritized queue/: prioritized_queue_4,2.c
module2/4/4.3 telephone directory tree/: telephone_directory_4.3.c
module2/6/6.1/: CMakeLists.txt
module2/6/6.1 telephone directory/: main.c  telephone_directory.c  telephone_directory.h
module2/6/6.2 telephone directory/: CMakeLists.txt  contact_list.c  contact_list.h  main.c
module2/calculator/: dynamic_calculator.c  simple_calculator.c
module2/chmod type code 3.1/: Tests.txt  chmod,c
module2/telephone directory 4.1/: telephone_directory.c
module2/telephone directory tree 4.3/: telephone_directory_4.3.c
module2/telephone_dictionary_4.1/: telephone_dictionary
module2/telephone_directory/: Telephone_directory.c
module2/telephone_directory_2.1/: Telephone_directory.c
module2/telephone_directory_4.1/: telephone_dictionary.c
module2/telephone_directory_tree_4.3/: telephone_directory_4.3.c
module3/lab01/: CMakeLists.txt
module3/lab02/: stringsum.c
module3/lab03/: CMakeLists.txt  lab3.c
module3/lab04/: lab4.c
module3/lab05/: README.md
module3/lab06/: CMakeLists.txt  README.md  chat1.c
module3/lab07/: CMakeLists.txt  README.md  posix_chat2.c
module3/lab08/: README.md
module3/lab09/: CMakeLists.txt  lab9.c
module3/lab1/: README.md  lab1.c
module3/lab10/: CMakeLists.txt  README.md  lab10.c
module3/lab11/: CMakeLists.txt  README.md  lab11.c
module3/lab12/: CMakeLists.txt  README.md  lab12.c
module3/lab13/: CMakeLists.txt  README.md  lab13.c
module3/lab14/: CMakeLists.txt  README.md  client.c  server.c
module3/lab15/: CMakeLists.txt  README.md  client.c  server.c
module3/lab16/: CMakeLists.txt  client.c  server.c
module3/lab17/: CMakeLists.txt  README.md  sniffed_messages.txt  sniffed_packets.pcap  sniffer.c
module3/lab18/: CMakeLists.txt  Makefile  README.md  server.c
module3/lab2/: CMakeLists.txt  README.md  shell.c  sum.c
module3/lab3/: README.md
module3/lab4/: CMakeLists.txt  README.md
module3/lab5/: CMakeLists.txt  lab5.c
module3/lab6/: chat2.c
module3/lab7/: posix_chat1.c
module3/lab8/: CMakeLists.txt  lab8.c
module3/lab9/: README.md
module4/lab1/: lab1.docx
module4/lab2/: lab2.docx
module4/lab2/configs/: Layer2Switch-1.conf  Layer2Switch-2.conf  Layer2Switch-3.conf  Layer2Switch-4.conf  Layer2Switch-5.conf
module4/lab3/: lab3.docx
module4/lab3/configs/: Layer2Switch-1.conf  Layer2Switch-2.conf  Layer2Switch-3.conf  Layer2Switch-4.conf  Layer2Switch-5.conf
module4/lab4/: lab4.docx
module4/lab4/configs/: R1.conf  R2.conf
module4/lab5/: lab5.docx  ~$lab4.docx
module4/lab5/configs/: R1.conf  R2.conf  R3.conf  R4.conf  R5.conf  R6.conf  R7.conf  R8.conf
module4/lab5/rt/: rt_R1.txt  rt_R2.txt  rt_R3.txt  rt_R4.txt  rt_R5.txt  rt_R6.txt  rt_R7.txt  rt_R8.txt
module5/lab1/: hello.c
module5/lab2/: proc.c
module5/lab3/: Makefile.mk  README.md  sysleds.c
module5/lab4/: Makefile  README.md  chardev.c
module5/lab5/: Makefile  netlink.c  netlink_test.c
